# cg-shooting-cans

./: .directory  .gitignore  CMakeLists.txt  Readme.md  ShootingCans.sln
Data/Assets/: Barn-Collision.mtl  Barn.mtl  Barrel1.mtl  Barrel2.mtl  Barrel3.mtl  Barrel4.mtl  Bus-Collision.mtl  Bus.mtl  Collision-Truck.mtl  ConcreteBase-Collision.mtl  ConcreteBase.mtl  Container-Collision.mtl  ContainerBlue.mtl  ContainerGreen.mtl  ContainerRed.mtl  ContainerWhite.mtl  Crater-Collision.mtl  Crater.mtl  DerelictHouse.mtl  Dirt-Collision.mtl  Dirt.mtl  Granary-Collision.mtl  Granary.mtl  Gun01.mtl  Hovel-Collision.mtl  Hovel.mtl  Mech.mtl  OilTruck-Collision.mtl  OilTruck.mtl  Outpost-Collision.mtl  Outpost.mtl  Rocks1.mtl  Rubble.mtl  Skeleton1.mtl  Truck.mtl  WalkerBody-Collision.mtl  WalkerBody.mtl  WalkerCannon.mtl  WalkerFlamer.mtl  WalkerFoot.mtl  (+12 more)
Data/Assets/maps/: prop_barrel_01_a.tif  prop_barrel_01_s.tif
Data/Fonts/: bodoni_mt_black.fnt
Data/Shaders/: basic_rendering.frag  basic_rendering.vert  postproc.frag  shadow_map_rendering.frag  shadow_map_rendering.vert
ShootingCans/: Bullet.h  Can.cpp  Can.h  Enviroment.cpp  Enviroment.h  GeometricMesh.cpp  GeometricMesh.h  GeometryNode.cpp  GeometryNode.h  OBJLoader.cpp  OBJLoader.h  Perimeter.cpp  Perimeter.h  Player.h  Renderer.cpp  Renderer.h  SceneNode.cpp  SceneNode.h  ShaderProgram.cpp  ShaderProgram.h  ShootingCans.vcxproj  ShootingCans.vcxproj.filters  SpotLightNode.cpp  SpotlightNode.h  TextureManager.cpp  Tools.cpp  Tools.h  isect.cpp  isect.h  main.cpp  test.cpp
