cmake_minimum_required(VERSION 3.12)
project(ShootingCans)

set(CMAKE_CXX_STANDARD 14)

include_directories(3rdparty/inc/GLEW)
include_directories(3rdparty/inc/glm)
include_directories(3rdparty/inc/glm/detail)
include_directories(3rdparty/inc/glm/gtc)
include_directories(3rdparty/inc/glm/gtx)
include_directories(3rdparty/inc/glm/simd)
include_directories(3rdparty/inc/SDL2)
include_directories(ShootingCans)

add_executable(ShootingCans
        3rdparty/inc/GLEW/eglew.h
        3rdparty/inc/GLEW/glew.h
        3rdparty/inc/GLEW/glxew.h
        3rdparty/inc/GLEW/wglew.h
        3rdparty/inc/glm/detail/_features.hpp
        3rdparty/inc/glm/detail/_fixes.hpp
        3rdparty/inc/glm/detail/_noise.hpp
        3rdparty/inc/glm/detail/_swizzle.hpp
        3rdparty/inc/glm/detail/_swizzle_func.hpp
        3rdparty/inc/glm/detail/_vectorize.hpp
        3rdparty/inc/glm/detail/dummy.cpp
        3rdparty/inc/glm/detail/func_common.hpp
        3rdparty/inc/glm/detail/func_common.inl
        3rdparty/inc/glm/detail/func_common_simd.inl
        3rdparty/inc/glm/detail/func_exponential.hpp
        3rdparty/inc/glm/detail/func_exponential.inl
        3rdparty/inc/glm/detail/func_exponential_simd.inl
        3rdparty/inc/glm/detail/func_geometric.hpp
        3rdparty/inc/glm/detail/func_geometric.inl
        3rdparty/inc/glm/detail/func_geometric_simd.inl
        3rdparty/inc/glm/detail/func_integer.hpp
        3rdparty/inc/glm/detail/func_integer.inl
        3rdparty/inc/glm/detail/func_integer_simd.inl
        3rdparty/inc/glm/detail/func_matrix.hpp
        3rdparty/inc/glm/detail/func_matrix.inl
        3rdparty/inc/glm/detail/func_matrix_simd.inl
        3rdparty/inc/glm/detail/func_packing.hpp
        3rdparty/inc/glm/detail/func_packing.inl
        3rdparty/inc/glm/detail/func_packing_simd.inl
        3rdparty/inc/glm/detail/func_trigonometric.hpp
        3rdparty/inc/glm/detail/func_trigonometric.inl
        3rdparty/inc/glm/detail/func_trigonometric_simd.inl
        3rdparty/inc/glm/detail/func_vector_relational.hpp
        3rdparty/inc/glm/detail/func_vector_relational.inl
        3rdparty/inc/glm/detail/func_vector_relational_simd.inl
        3rdparty/inc/glm/detail/glm.cpp
        3rdparty/inc/glm/detail/precision.hpp
        3rdparty/inc/glm/detail/setup.hpp
        3rdparty/inc/glm/detail/type_float.hpp
        3rdparty/inc/glm/detail/type_gentype.hpp
        3rdparty/inc/glm/detail/type_gentype.inl
        3rdparty/inc/glm/detail/type_half.hpp
        3rdparty/inc/glm/detail/type_half.inl
        3rdparty/inc/glm/detail/type_int.hpp
        3rdparty/inc/glm/detail/type_mat.hpp
        3rdparty/inc/glm/detail/type_mat.inl
        3rdparty/inc/glm/detail/type_mat2x2.hpp
        3rdparty/inc/glm/detail/type_mat2x2.inl
        3rdparty/inc/glm/detail/type_mat2x3.hpp
        3rdparty/inc/glm/detail/type_mat2x3.inl
        3rdparty/inc/glm/detail/type_mat2x4.hpp
        3rdparty/inc/glm/detail/type_mat2x4.inl
        3rdparty/inc/glm/detail/type_mat3x2.hpp
        3rdparty/inc/glm/detail/type_mat3x2.inl
        3rdparty/inc/glm/detail/type_mat3x3.hpp
        3rdparty/inc/glm/detail/type_mat3x3.inl
        3rdparty/inc/glm/detail/type_mat3x4.hpp
        3rdparty/inc/glm/detail/type_mat3x4.inl
        3rdparty/inc/glm/detail/type_mat4x2.hpp
        3rdparty/inc/glm/detail/type_mat4x2.inl
        3rdparty/inc/glm/detail/type_mat4x3.hpp
        3rdparty/inc/glm/detail/type_mat4x3.inl
        3rdparty/inc/glm/detail/type_mat4x4.hpp
        3rdparty/inc/glm/detail/type_mat4x4.inl
        3rdparty/inc/glm/detail/type_mat4x4_simd.inl
        3rdparty/inc/glm/detail/type_vec.hpp
        3rdparty/inc/glm/detail/type_vec.inl
        3rdparty/inc/glm/detail/type_vec1.hpp
        3rdparty/inc/glm/detail/type_vec1.inl
        3rdparty/inc/glm/detail/type_vec2.hpp
        3rdparty/inc/glm/detail/type_vec2.inl
        3rdparty/inc/glm/detail/type_vec3.hpp
        3rdparty/inc/glm/detail/type_vec3.inl
        3rdparty/inc/glm/detail/type_vec4.hpp
        3rdparty/inc/glm/detail/type_vec4.inl
        3rdparty/inc/glm/detail/type_vec4_simd.inl
        3rdparty/inc/glm/gtc/bitfield.hpp
        3rdparty/inc/glm/gtc/bitfield.inl
        3rdparty/inc/glm/gtc/color_encoding.inl
        3rdparty/inc/glm/gtc/color_space.hpp
        3rdparty/inc/glm/gtc/color_space.inl
        3rdparty/inc/glm/gtc/constants.hpp
        3rdparty/inc/glm/gtc/constants.inl
        3rdparty/inc/glm/gtc/epsilon.hpp
        3rdparty/inc/glm/gtc/epsilon.inl
        3rdparty/inc/glm/gtc/functions.hpp
        3rdparty/inc/glm/gtc/functions.inl
        3rdparty/inc/glm/gtc/integer.hpp
        3rdparty/inc/glm/gtc/integer.inl
        3rdparty/inc/glm/gtc/matrix_access.hpp
        3rdparty/inc/glm/gtc/matrix_access.inl
        3rdparty/inc/glm/gtc/matrix_integer.hpp
        3rdparty/inc/glm/gtc/matrix_inverse.hpp
        3rdparty/inc/glm/gtc/matrix_inverse.inl
        3rdparty/inc/glm/gtc/matrix_transform.hpp
        3rdparty/inc/glm/gtc/matrix_transform.inl
        3rdparty/inc/glm/gtc/noise.hpp
        3rdparty/inc/glm/gtc/noise.inl
        3rdparty/inc/glm/gtc/packing.hpp
        3rdparty/inc/glm/gtc/packing.inl
        3rdparty/inc/glm/gtc/quaternion.hpp
        3rdparty/inc/glm/gtc/quaternion.inl
        3rdparty/inc/glm/gtc/quaternion_simd.inl
        3rdparty/inc/glm/gtc/random.hpp
        3rdparty/inc/glm/gtc/random.inl
        3rdparty/inc/glm/gtc/reciprocal.hpp
        3rdparty/inc/glm/gtc/reciprocal.inl
        3rdparty/inc/glm/gtc/round.hpp
        3rdparty/inc/glm/gtc/round.inl
        3rdparty/inc/glm/gtc/type_aligned.hpp
        3rdparty/inc/glm/gtc/type_precision.hpp
        3rdparty/inc/glm/gtc/type_precision.inl
        3rdparty/inc/glm/gtc/type_ptr.hpp
        3rdparty/inc/glm/gtc/type_ptr.inl
        3rdparty/inc/glm/gtc/ulp.hpp
        3rdparty/inc/glm/gtc/ulp.inl
        3rdparty/inc/glm/gtc/vec1.hpp
        3rdparty/inc/glm/gtc/vec1.inl
        3rdparty/inc/glm/gtx/associated_min_max.hpp
        3rdparty/inc/glm/gtx/associated_min_max.inl
        3rdparty/inc/glm/gtx/bit.hpp
        3rdparty/inc/glm/gtx/bit.inl
        3rdparty/inc/glm/gtx/closest_point.hpp
        3rdparty/inc/glm/gtx/closest_point.inl
        3rdparty/inc/glm/gtx/color_space.hpp
        3rdparty/inc/glm/gtx/color_space.inl
        3rdparty/inc/glm/gtx/color_space_YCoCg.hpp
        3rdparty/inc/glm/gtx/color_space_YCoCg.inl
        3rdparty/inc/glm/gtx/common.hpp
        3rdparty/inc/glm/gtx/common.inl
        3rdparty/inc/glm/gtx/compatibility.hpp
        3rdparty/inc/glm/gtx/compatibility.inl
        3rdparty/inc/glm/gtx/component_wise.hpp
        3rdparty/inc/glm/gtx/component_wise.inl
        3rdparty/inc/glm/gtx/dual_quaternion.hpp
        3rdparty/inc/glm/gtx/dual_quaternion.inl
        3rdparty/inc/glm/gtx/euler_angles.hpp
        3rdparty/inc/glm/gtx/euler_angles.inl
        3rdparty/inc/glm/gtx/extend.hpp
        3rdparty/inc/glm/gtx/extend.inl
        3rdparty/inc/glm/gtx/extended_min_max.hpp
        3rdparty/inc/glm/gtx/extended_min_max.inl
        3rdparty/inc/glm/gtx/fast_exponential.hpp
        3rdparty/inc/glm/gtx/fast_exponential.inl
        3rdparty/inc/glm/gtx/fast_square_root.hpp
        3rdparty/inc/glm/gtx/fast_square_root.inl
        3rdparty/inc/glm/gtx/fast_trigonometry.hpp
        3rdparty/inc/glm/gtx/fast_trigonometry.inl
        3rdparty/inc/glm/gtx/float_notmalize.inl
        3rdparty/inc/glm/gtx/gradient_paint.hpp
        3rdparty/inc/glm/gtx/gradient_paint.inl
        3rdparty/inc/glm/gtx/handed_coordinate_space.hpp
        3rdparty/inc/glm/gtx/handed_coordinate_space.inl
        3rdparty/inc/glm/gtx/hash.hpp
        3rdparty/inc/glm/gtx/hash.inl
        3rdparty/inc/glm/gtx/integer.hpp
        3rdparty/inc/glm/gtx/integer.inl
        3rdparty/inc/glm/gtx/intersect.hpp
        3rdparty/inc/glm/gtx/intersect.inl
        3rdparty/inc/glm/gtx/io.hpp
        3rdparty/inc/glm/gtx/io.inl
        3rdparty/inc/glm/gtx/log_base.hpp
        3rdparty/inc/glm/gtx/log_base.inl
        3rdparty/inc/glm/gtx/matrix_cross_product.hpp
        3rdparty/inc/glm/gtx/matrix_cross_product.inl
        3rdparty/inc/glm/gtx/matrix_decompose.hpp
        3rdparty/inc/glm/gtx/matrix_decompose.inl
        3rdparty/inc/glm/gtx/matrix_interpolation.hpp
        3rdparty/inc/glm/gtx/matrix_interpolation.inl
        3rdparty/inc/glm/gtx/matrix_major_storage.hpp
        3rdparty/inc/glm/gtx/matrix_major_storage.inl
        3rdparty/inc/glm/gtx/matrix_operation.hpp
        3rdparty/inc/glm/gtx/matrix_operation.inl
        3rdparty/inc/glm/gtx/matrix_query.hpp
        3rdparty/inc/glm/gtx/matrix_query.inl
        3rdparty/inc/glm/gtx/matrix_transform_2d.hpp
        3rdparty/inc/glm/gtx/matrix_transform_2d.inl
        3rdparty/inc/glm/gtx/mixed_product.hpp
        3rdparty/inc/glm/gtx/mixed_product.inl
        3rdparty/inc/glm/gtx/norm.hpp
        3rdparty/inc/glm/gtx/norm.inl
        3rdparty/inc/glm/gtx/normal.hpp
        3rdparty/inc/glm/gtx/normal.inl
        3rdparty/inc/glm/gtx/normalize_dot.hpp
        3rdparty/inc/glm/gtx/normalize_dot.inl
        3rdparty/inc/glm/gtx/number_precision.hpp
        3rdparty/inc/glm/gtx/number_precision.inl
        3rdparty/inc/glm/gtx/optimum_pow.hpp
        3rdparty/inc/glm/gtx/optimum_pow.inl
        3rdparty/inc/glm/gtx/orthonormalize.hpp
        3rdparty/inc/glm/gtx/orthonormalize.inl
        3rdparty/inc/glm/gtx/perpendicular.hpp
        3rdparty/inc/glm/gtx/perpendicular.inl
        3rdparty/inc/glm/gtx/polar_coordinates.hpp
        3rdparty/inc/glm/gtx/polar_coordinates.inl
        3rdparty/inc/glm/gtx/projection.hpp
        3rdparty/inc/glm/gtx/projection.inl
        3rdparty/inc/glm/gtx/quaternion.hpp
        3rdparty/inc/glm/gtx/quaternion.inl
        3rdparty/inc/glm/gtx/range.hpp
        3rdparty/inc/glm/gtx/raw_data.hpp
        3rdparty/inc/glm/gtx/raw_data.inl
        3rdparty/inc/glm/gtx/rotate_normalized_axis.hpp
        3rdparty/inc/glm/gtx/rotate_normalized_axis.inl
        3rdparty/inc/glm/gtx/rotate_vector.hpp
        3rdparty/inc/glm/gtx/rotate_vector.inl
        3rdparty/inc/glm/gtx/scalar_multiplication.hpp
        3rdparty/inc/glm/gtx/scalar_relational.hpp
        3rdparty/inc/glm/gtx/scalar_relational.inl
        3rdparty/inc/glm/gtx/simd_mat4.hpp
        3rdparty/inc/glm/gtx/simd_mat4.inl
        3rdparty/inc/glm/gtx/simd_quat.hpp
        3rdparty/inc/glm/gtx/simd_quat.inl
        3rdparty/inc/glm/gtx/simd_vec4.hpp
        3rdparty/inc/glm/gtx/simd_vec4.inl
        3rdparty/inc/glm/gtx/spline.hpp
        3rdparty/inc/glm/gtx/spline.inl
        3rdparty/inc/glm/gtx/std_based_type.hpp
        3rdparty/inc/glm/gtx/std_based_type.inl
        3rdparty/inc/glm/gtx/string_cast.hpp
        3rdparty/inc/glm/gtx/string_cast.inl
        3rdparty/inc/glm/gtx/transform.hpp
        3rdparty/inc/glm/gtx/transform.inl
        3rdparty/inc/glm/gtx/transform2.hpp
        3rdparty/inc/glm/gtx/transform2.inl
        3rdparty/inc/glm/gtx/type_aligned.hpp
        3rdparty/inc/glm/gtx/type_aligned.inl
        3rdparty/inc/glm/gtx/type_trait.hpp
        3rdparty/inc/glm/gtx/type_trait.inl
        3rdparty/inc/glm/gtx/vector_angle.hpp
        3rdparty/inc/glm/gtx/vector_angle.inl
        3rdparty/inc/glm/gtx/vector_query.hpp
        3rdparty/inc/glm/gtx/vector_query.inl
        3rdparty/inc/glm/gtx/wrap.hpp
        3rdparty/inc/glm/gtx/wrap.inl
        3rdparty/inc/glm/simd/common.h
        3rdparty/inc/glm/simd/exponential.h
        3rdparty/inc/glm/simd/geometric.h
        3rdparty/inc/glm/simd/integer.h
        3rdparty/inc/glm/simd/matrix.h
        3rdparty/inc/glm/simd/packing.h
        3rdparty/inc/glm/simd/platform.h
        3rdparty/inc/glm/simd/trigonometric.h
        3rdparty/inc/glm/simd/vector_relational.h
        3rdparty/inc/glm/common.hpp
        3rdparty/inc/glm/exponential.hpp
        3rdparty/inc/glm/ext.hpp
        3rdparty/inc/glm/fwd.hpp
        3rdparty/inc/glm/geometric.hpp
        3rdparty/inc/glm/glm.hpp
        3rdparty/inc/glm/integer.hpp
        3rdparty/inc/glm/mat2x2.hpp
        3rdparty/inc/glm/mat2x3.hpp
        3rdparty/inc/glm/mat2x4.hpp
        3rdparty/inc/glm/mat3x2.hpp
        3rdparty/inc/glm/mat3x3.hpp
        3rdparty/inc/glm/mat3x4.hpp
        3rdparty/inc/glm/mat4x2.hpp
        3rdparty/inc/glm/mat4x3.hpp
        3rdparty/inc/glm/mat4x4.hpp
        3rdparty/inc/glm/matrix.hpp
        3rdparty/inc/glm/packing.hpp
        3rdparty/inc/glm/trigonometric.hpp
        3rdparty/inc/glm/vec2.hpp
        3rdparty/inc/glm/vec3.hpp
        3rdparty/inc/glm/vec4.hpp
        3rdparty/inc/glm/vector_relational.hpp
        3rdparty/inc/SDL2/begin_code.h
        3rdparty/inc/SDL2/close_code.h
        3rdparty/inc/SDL2/SDL.h
        3rdparty/inc/SDL2/SDL_assert.h
        3rdparty/inc/SDL2/SDL_atomic.h
        3rdparty/inc/SDL2/SDL_audio.h
        3rdparty/inc/SDL2/SDL_bits.h
        3rdparty/inc/SDL2/SDL_blendmode.h
        3rdparty/inc/SDL2/SDL_clipboard.h
        3rdparty/inc/SDL2/SDL_config.h
        3rdparty/inc/SDL2/SDL_config_android.h
        3rdparty/inc/SDL2/SDL_config_iphoneos.h
        3rdparty/inc/SDL2/SDL_config_macosx.h
        3rdparty/inc/SDL2/SDL_config_minimal.h
        3rdparty/inc/SDL2/SDL_config_pandora.h
        3rdparty/inc/SDL2/SDL_config_psp.h
        3rdparty/inc/SDL2/SDL_config_windows.h
        3rdparty/inc/SDL2/SDL_config_winrt.h
        3rdparty/inc/SDL2/SDL_config_wiz.h
        3rdparty/inc/SDL2/SDL_copying.h
        3rdparty/inc/SDL2/SDL_cpuinfo.h
        3rdparty/inc/SDL2/SDL_egl.h
        3rdparty/inc/SDL2/SDL_endian.h
        3rdparty/inc/SDL2/SDL_error.h
        3rdparty/inc/SDL2/SDL_events.h
        3rdparty/inc/SDL2/SDL_filesystem.h
        3rdparty/inc/SDL2/SDL_gamecontroller.h
        3rdparty/inc/SDL2/SDL_gesture.h
        3rdparty/inc/SDL2/SDL_haptic.h
        3rdparty/inc/SDL2/SDL_hints.h
        3rdparty/inc/SDL2/SDL_image.h
        3rdparty/inc/SDL2/SDL_joystick.h
        3rdparty/inc/SDL2/SDL_keyboard.h
        3rdparty/inc/SDL2/SDL_keycode.h
        3rdparty/inc/SDL2/SDL_loadso.h
        3rdparty/inc/SDL2/SDL_log.h
        3rdparty/inc/SDL2/SDL_main.h
        3rdparty/inc/SDL2/SDL_messagebox.h
        3rdparty/inc/SDL2/SDL_mixer.h
        3rdparty/inc/SDL2/SDL_mouse.h
        3rdparty/inc/SDL2/SDL_mutex.h
        3rdparty/inc/SDL2/SDL_name.h
        3rdparty/inc/SDL2/SDL_opengl.h
        3rdparty/inc/SDL2/SDL_opengl_glext.h
        3rdparty/inc/SDL2/SDL_opengles.h
        3rdparty/inc/SDL2/SDL_opengles2.h
        3rdparty/inc/SDL2/SDL_opengles2_gl2.h
        3rdparty/inc/SDL2/SDL_opengles2_gl2ext.h
        3rdparty/inc/SDL2/SDL_opengles2_gl2platform.h
        3rdparty/inc/SDL2/SDL_opengles2_khrplatform.h
        3rdparty/inc/SDL2/SDL_pixels.h
        3rdparty/inc/SDL2/SDL_platform.h
        3rdparty/inc/SDL2/SDL_power.h
        3rdparty/inc/SDL2/SDL_quit.h
        3rdparty/inc/SDL2/SDL_rect.h
        3rdparty/inc/SDL2/SDL_render.h
        3rdparty/inc/SDL2/SDL_revision.h
        3rdparty/inc/SDL2/SDL_rwops.h
        3rdparty/inc/SDL2/SDL_scancode.h
        3rdparty/inc/SDL2/SDL_shape.h
        3rdparty/inc/SDL2/SDL_stdinc.h
        3rdparty/inc/SDL2/SDL_surface.h
        3rdparty/inc/SDL2/SDL_system.h
        3rdparty/inc/SDL2/SDL_syswm.h
        3rdparty/inc/SDL2/SDL_test.h
        3rdparty/inc/SDL2/SDL_test_assert.h
        3rdparty/inc/SDL2/SDL_test_common.h
        3rdparty/inc/SDL2/SDL_test_compare.h
        3rdparty/inc/SDL2/SDL_test_crc32.h
        3rdparty/inc/SDL2/SDL_test_font.h
        3rdparty/inc/SDL2/SDL_test_fuzzer.h
        3rdparty/inc/SDL2/SDL_test_harness.h
        3rdparty/inc/SDL2/SDL_test_images.h
        3rdparty/inc/SDL2/SDL_test_log.h
        3rdparty/inc/SDL2/SDL_test_md5.h
        3rdparty/inc/SDL2/SDL_test_memory.h
        3rdparty/inc/SDL2/SDL_test_random.h
        3rdparty/inc/SDL2/SDL_thread.h
        3rdparty/inc/SDL2/SDL_timer.h
        3rdparty/inc/SDL2/SDL_touch.h
        3rdparty/inc/SDL2/SDL_ttf.h
        3rdparty/inc/SDL2/SDL_types.h
        3rdparty/inc/SDL2/SDL_version.h
        3rdparty/inc/SDL2/SDL_video.h
        3rdparty/inc/SDL2/SDL_vulkan.h
        ShootingCans/Bullet.h
        ShootingCans/Can.cpp
        ShootingCans/Can.h
        ShootingCans/Enviroment.cpp
        ShootingCans/Enviroment.h
        ShootingCans/GeometricMesh.cpp
        ShootingCans/GeometricMesh.h
        ShootingCans/GeometryNode.cpp
        ShootingCans/GeometryNode.h
        ShootingCans/isect.cpp
        ShootingCans/isect.h
        ShootingCans/main.cpp
        ShootingCans/OBJLoader.cpp
        ShootingCans/OBJLoader.h
        ShootingCans/Perimeter.cpp
        ShootingCans/Perimeter.h
        ShootingCans/Player.h
        ShootingCans/Renderer.cpp
        ShootingCans/Renderer.h
        ShootingCans/SceneNode.cpp
        ShootingCans/SceneNode.h
        ShootingCans/ShaderProgram.cpp
        ShootingCans/ShaderProgram.h
        ShootingCans/SpotLightNode.cpp
        ShootingCans/SpotlightNode.h
        ShootingCans/test.cpp
        ShootingCans/TextureManager.cpp
        ShootingCans/TextureManager.h
        ShootingCans/Tools.cpp
        ShootingCans/Tools.h)
